Added conformance tests for 1.3 version of the spec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-# 
+#
 
 # Copyright (c) 2012-2017 The Khronos Group Inc.
 #
@@ -51,6 +51,35 @@ status_separator()
 option( OPENVX_USE_IX ON )
 option( OPENVX_USE_NN ON )
 option( OPENVX_USE_NN_16 ON )
+option( OPENVX_USE_PIPELINING OFF )
+option( OPENVX_USE_STREAMING OFF )
+option( OPENVX_USE_USER_DATA_OBJECT OFF )
+option( OPENVX_USE_U1 ON )
+option( OPENVX_CONFORMANCE_VISION ON )
+option( OPENVX_CONFORMANCE_NEURAL_NETWORKS ON )
+option( OPENVX_CONFORMANCE_NNEF_IMPORT ON)
+option( OPENVX_USE_ENHANCED_VISION ON )
+
+
+message( "-- Selected OpenVX Feature Sets:")
+if (OPENVX_CONFORMANCE_VISION)
+    add_definitions( -DOPENVX_CONFORMANCE_VISION )
+    message( "-- 'Vision' conformance feature set")
+endif (OPENVX_CONFORMANCE_VISION)
+if (OPENVX_CONFORMANCE_NEURAL_NETWORKS)
+    add_definitions( -DOPENVX_CONFORMANCE_NEURAL_NETWORKS -DOPENVX_USE_NN )
+    message( "-- 'Neural Networks' conformance feature set")
+endif (OPENVX_CONFORMANCE_NEURAL_NETWORKS)
+if (OPENVX_CONFORMANCE_NNEF_IMPORT)
+    add_definitions( -DOPENVX_CONFORMANCE_NNEF_IMPORT )
+    message( "-- 'NNEF Import' conformance feature set")
+endif (OPENVX_CONFORMANCE_NNEF_IMPORT)
+if (OPENVX_USE_ENHANCED_VISION)
+    add_definitions( -DOPENVX_USE_ENHANCED_VISION )
+    message( "-- 'Enhanced Vision' feature set")
+endif (OPENVX_USE_ENHANCED_VISION)
+message( "--" )
+
 
 message( "-- Selected OpenVX Extensions:")
 if (OPENVX_USE_IX)
@@ -58,13 +87,29 @@ if (OPENVX_USE_IX)
     message( "--    Offical Import-Export extension")
 endif (OPENVX_USE_IX)
 if (OPENVX_USE_NN)
-    add_definitions( -DOPENVX_USE_NN )
+    add_definitions( -DOPENVX_USE_NN -DOPENVX_CONFORMANCE_NEURAL_NETWORKS )
     message( "--    Offical NeuralNet extension")
 endif (OPENVX_USE_NN)
 if (OPENVX_USE_NN_16)
     add_definitions( -DOPENVX_USE_NN_16 )
     message( "--    Offical NeuralNet 16 bits extension")
 endif (OPENVX_USE_NN_16)
+if (OPENVX_USE_PIPELINING)
+    add_definitions( -DOPENVX_USE_PIPELINING )
+    message( "--    Offical Pipelining extension")
+endif (OPENVX_USE_PIPELINING)
+if (OPENVX_USE_STREAMING)
+    add_definitions( -DOPENVX_USE_STREAMING )
+    message( "--    Offical Streaming extension")
+endif (OPENVX_USE_STREAMING)
+if (OPENVX_USE_USER_DATA_OBJECT)
+    add_definitions( -DOPENVX_USE_USER_DATA_OBJECT )
+    message( "--    Offical User Data Object extension")
+endif (OPENVX_USE_USER_DATA_OBJECT)
+if (OPENVX_USE_U1)
+    add_definitions( -DOPENVX_USE_U1 )
+    message( "--    Offical binary (1 bit) feature set")
+endif (OPENVX_USE_U1)
 message( "--" )
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
