Syncing from internal gitlab
[#21] Fix issue with mismatch in NN and NN conformance results

[#21,#17] Fixes cmake issues for both issues

- #21, Needed to disable Network folder build when NN_16 is not
  being enabled
- #17, Need to add appropriate posix definitions in order to allow
  proper access to usleep within unistd.h

--- a/test_conformance/CMakeLists.txt
+++ b/test_conformance/CMakeLists.txt
@@ -1,4 +1,4 @@
-# 
+#
 
 # Copyright (c) 2012-2017 The Khronos Group Inc.
 #
@@ -21,7 +21,10 @@ set(target vx_test_conformance)
 
 file(GLOB SOURCES "./*.c")
 file(GLOB HEADERS "./*.h")
+
+if(OPENVX_USE_NN_16)
 file(GLOB NETWORK_SOURCES "./Networks/src/*")
+endif(OPENVX_USE_NN_16)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
